# LucenePlusPlus

./: .gitignore  LICENSE  README.md  bootstrap.cmd  bootstrap.sh  meson.build  meson_options.txt
buildfiles/native/: x86_64-Windows.ini
dependencies/: meson.build
dependencies/boost/: meson.build
dependencies/zlib/: meson.build
extra/: BUILDING.md  Config.h.in  meson.build
src/: meson.build
src/core/: meson.build
src/core/analysis/: meson.build
src/core/analysis/standard/: meson.build
src/core/analysis/tokenattributes/: meson.build
src/core/document/: meson.build
src/core/include/: meson.build
src/core/index/: meson.build
src/core/queryparser/: meson.build
src/core/search/: meson.build
src/core/search/function/: meson.build
src/core/search/payloads/: meson.build
src/core/search/spans/: meson.build
src/core/store/: meson.build
src/core/util/: meson.build
src/core/util/md5/: meson.build
src/core/util/unicode/: meson.build
src/include/: CachingWrapperFilter.h  DocumentsWriter.h  FieldCacheRangeFilter.h  FieldInvertState.h  IndexWriter.h  MultiTermQueryWrapperFilter.h  NumericRangeQuery.h  RAMDirectory.h  RAMFile.h  SegmentReader.h  SortField.h  TopScoreDocCollector.h  meson.build
