# tomahawk dependencies build file
#============================================================================


# Required dependencies
#---------------------------------------------------
dependencies_dirs = [
    'boost',
    'zlib']



# build Dependencies
#---------------------------------------------------
foreach dir : dependencies_dirs
    subdir(dir)
endforeach
