# src build file
#============================================================================

lucene_include_dir = meson.current_source_dir()
lucene_inc += include_directories('.')


lucene_pch += files(
    join_paths(lucene_include_dir, 'AbstractAllTermDocs.h'),
    join_paths(lucene_include_dir, 'AbstractField.h'),
    join_paths(lucene_include_dir, 'AllTermDocs.h'),
    join_paths(lucene_include_dir, 'Analyzer.h'),
    join_paths(lucene_include_dir, 'Array.h'),
    join_paths(lucene_include_dir, 'ASCIIFoldingFilter.h'),
    join_paths(lucene_include_dir, 'Attribute.h'),
    join_paths(lucene_include_dir, 'AttributeSource.h'),
    join_paths(lucene_include_dir, 'AveragePayloadFunction.h'),
    join_paths(lucene_include_dir, 'Base64.h'),
    join_paths(lucene_include_dir, 'BaseCharFilter.h'),
    join_paths(lucene_include_dir, 'BitSet.h'),
    join_paths(lucene_include_dir, 'BitUtil.h'),
    join_paths(lucene_include_dir, 'BitVector.h'),
    join_paths(lucene_include_dir, 'BooleanClause.h'),
    join_paths(lucene_include_dir, 'BooleanQuery.h'),
    join_paths(lucene_include_dir, 'BooleanScorer2.h'),
    join_paths(lucene_include_dir, 'BooleanScorer.h'),
    join_paths(lucene_include_dir, 'BufferedDeletes.h'),
    join_paths(lucene_include_dir, 'BufferedIndexInput.h'),
    join_paths(lucene_include_dir, 'BufferedIndexOutput.h'),
    join_paths(lucene_include_dir, 'BufferedReader.h'),
    join_paths(lucene_include_dir, 'ByteBlockPool.h'),
    join_paths(lucene_include_dir, 'ByteFieldSource.h'),
    join_paths(lucene_include_dir, 'ByteSliceReader.h'),
    join_paths(lucene_include_dir, 'ByteSliceWriter.h'),
    join_paths(lucene_include_dir, 'CachingSpanFilter.h'),
    join_paths(lucene_include_dir, 'CachingTokenFilter.h'),
    join_paths(lucene_include_dir, 'CachingWrapperFilter.h'),
    join_paths(lucene_include_dir, 'CharArraySet.h'),
    join_paths(lucene_include_dir, 'CharBlockPool.h'),
    join_paths(lucene_include_dir, 'CharFilter.h'),
    join_paths(lucene_include_dir, 'CharFolder.h'),
    join_paths(lucene_include_dir, 'CharReader.h'),
    join_paths(lucene_include_dir, 'CharStream.h'),
    join_paths(lucene_include_dir, 'CharTokenizer.h'),
    join_paths(lucene_include_dir, 'CheckIndex.h'),
    join_paths(lucene_include_dir, 'ChecksumIndexInput.h'),
    join_paths(lucene_include_dir, 'ChecksumIndexOutput.h'),
    join_paths(lucene_include_dir, 'CloseableThreadLocal.h'),
    join_paths(lucene_include_dir, 'Collator.h'),
    join_paths(lucene_include_dir, 'Collection.h'),
    join_paths(lucene_include_dir, 'Collector.h'),
    join_paths(lucene_include_dir, 'ComplexExplanation.h'),
    join_paths(lucene_include_dir, 'CompoundFileReader.h'),
    join_paths(lucene_include_dir, 'CompoundFileWriter.h'),
    join_paths(lucene_include_dir, 'CompressionTools.h'),
    join_paths(lucene_include_dir, 'ConcurrentMergeScheduler.h'),
    join_paths(lucene_include_dir, 'ConjunctionScorer.h'),
    join_paths(lucene_include_dir, 'ConstantScoreQuery.h'),
    join_paths(lucene_include_dir, 'Constants.h'),
    join_paths(lucene_include_dir, 'CustomScoreProvider.h'),
    join_paths(lucene_include_dir, 'CustomScoreQuery.h'),
    join_paths(lucene_include_dir, 'CycleCheck.h'),
    join_paths(lucene_include_dir, 'DateField.h'),
    join_paths(lucene_include_dir, 'DateTools.h'),
    join_paths(lucene_include_dir, 'DefaultSimilarity.h'),
    join_paths(lucene_include_dir, 'DefaultSkipListReader.h'),
    join_paths(lucene_include_dir, 'DefaultSkipListWriter.h'),
    join_paths(lucene_include_dir, 'Directory.h'),
    join_paths(lucene_include_dir, 'DirectoryReader.h'),
    join_paths(lucene_include_dir, 'DisjunctionMaxQuery.h'),
    join_paths(lucene_include_dir, 'DisjunctionMaxScorer.h'),
    join_paths(lucene_include_dir, 'DisjunctionSumScorer.h'),
    join_paths(lucene_include_dir, 'DocConsumer.h'),
    join_paths(lucene_include_dir, 'DocConsumerPerThread.h'),
    join_paths(lucene_include_dir, 'DocFieldConsumer.h'),
    join_paths(lucene_include_dir, 'DocFieldConsumerPerField.h'),
    join_paths(lucene_include_dir, 'DocFieldConsumerPerThread.h'),
    join_paths(lucene_include_dir, 'DocFieldConsumers.h'),
    join_paths(lucene_include_dir, 'DocFieldConsumersPerField.h'),
    join_paths(lucene_include_dir, 'DocFieldConsumersPerThread.h'),
    join_paths(lucene_include_dir, 'DocFieldProcessor.h'),
    join_paths(lucene_include_dir, 'DocFieldProcessorPerField.h'),
    join_paths(lucene_include_dir, 'DocFieldProcessorPerThread.h'),
    join_paths(lucene_include_dir, 'DocIdBitSet.h'),
    join_paths(lucene_include_dir, 'DocIdSet.h'),
    join_paths(lucene_include_dir, 'DocIdSetIterator.h'),
    join_paths(lucene_include_dir, 'DocInverter.h'),
    join_paths(lucene_include_dir, 'DocInverterPerField.h'),
    join_paths(lucene_include_dir, 'DocInverterPerThread.h'),
    join_paths(lucene_include_dir, 'Document.h'),
    join_paths(lucene_include_dir, 'DocumentsWriter.h'),
    join_paths(lucene_include_dir, 'DocumentsWriterThreadState.h'),
    join_paths(lucene_include_dir, 'DocValues.h'),
    join_paths(lucene_include_dir, 'DoubleFieldSource.h'),
    join_paths(lucene_include_dir, 'ExactPhraseScorer.h'),
    join_paths(lucene_include_dir, 'Explanation.h'),
    join_paths(lucene_include_dir, 'FastCharStream.h'),
    join_paths(lucene_include_dir, 'Fieldable.h'),
    join_paths(lucene_include_dir, 'FieldCache.h'),
    join_paths(lucene_include_dir, 'FieldCacheImpl.h'),
    join_paths(lucene_include_dir, 'FieldCacheRangeFilter.h'),
    join_paths(lucene_include_dir, 'FieldCacheSanityChecker.h'),
    join_paths(lucene_include_dir, 'FieldCacheSource.h'),
    join_paths(lucene_include_dir, 'FieldCacheTermsFilter.h'),
    join_paths(lucene_include_dir, 'FieldComparator.h'),
    join_paths(lucene_include_dir, 'FieldComparatorSource.h'),
    join_paths(lucene_include_dir, 'FieldDoc.h'),
    join_paths(lucene_include_dir, 'FieldDocSortedHitQueue.h'),
    join_paths(lucene_include_dir, 'Field.h'),
    join_paths(lucene_include_dir, 'FieldInfo.h'),
    join_paths(lucene_include_dir, 'FieldInfos.h'),
    join_paths(lucene_include_dir, 'FieldInvertState.h'),
    join_paths(lucene_include_dir, 'FieldMaskingSpanQuery.h'),
    join_paths(lucene_include_dir, 'FieldScoreQuery.h'),
    join_paths(lucene_include_dir, 'FieldSelector.h'),
    join_paths(lucene_include_dir, 'FieldSortedTermVectorMapper.h'),
    join_paths(lucene_include_dir, 'FieldsReader.h'),
    join_paths(lucene_include_dir, 'FieldsWriter.h'),
    join_paths(lucene_include_dir, 'FieldValueHitQueue.h'),
    join_paths(lucene_include_dir, 'FileReader.h'),
    join_paths(lucene_include_dir, 'FileSwitchDirectory.h'),
    join_paths(lucene_include_dir, 'FileUtils.h'),
    join_paths(lucene_include_dir, 'FilteredDocIdSet.h'),
    join_paths(lucene_include_dir, 'FilteredDocIdSetIterator.h'),
    join_paths(lucene_include_dir, 'FilteredQuery.h'),
    join_paths(lucene_include_dir, 'FilteredTermEnum.h'),
    join_paths(lucene_include_dir, 'Filter.h'),
    join_paths(lucene_include_dir, 'FilterIndexReader.h'),
    join_paths(lucene_include_dir, 'FilterManager.h'),
    join_paths(lucene_include_dir, 'FlagsAttribute.h'),
    join_paths(lucene_include_dir, 'FormatPostingsDocsConsumer.h'),
    join_paths(lucene_include_dir, 'FormatPostingsDocsWriter.h'),
    join_paths(lucene_include_dir, 'FormatPostingsFieldsConsumer.h'),
    join_paths(lucene_include_dir, 'FormatPostingsFieldsWriter.h'),
    join_paths(lucene_include_dir, 'FormatPostingsPositionsConsumer.h'),
    join_paths(lucene_include_dir, 'FormatPostingsPositionsWriter.h'),
    join_paths(lucene_include_dir, 'FormatPostingsTermsConsumer.h'),
    join_paths(lucene_include_dir, 'FormatPostingsTermsWriter.h'),
    join_paths(lucene_include_dir, 'FreqProxFieldMergeState.h'),
    join_paths(lucene_include_dir, 'FreqProxTermsWriter.h'),
    join_paths(lucene_include_dir, 'FreqProxTermsWriterPerField.h'),
    join_paths(lucene_include_dir, 'FreqProxTermsWriterPerThread.h'),
    join_paths(lucene_include_dir, 'FSDirectory.h'),
    join_paths(lucene_include_dir, 'FSLockFactory.h'),
    join_paths(lucene_include_dir, 'FuzzyQuery.h'),
    join_paths(lucene_include_dir, 'FuzzyTermEnum.h'),
    join_paths(lucene_include_dir, 'HashMap.h'),
    join_paths(lucene_include_dir, 'HashSet.h'),
    join_paths(lucene_include_dir, 'HitQueueBase.h'),
    join_paths(lucene_include_dir, 'HitQueue.h'),
    join_paths(lucene_include_dir, 'IndexCommit.h'),
    join_paths(lucene_include_dir, 'IndexDeletionPolicy.h'),
    join_paths(lucene_include_dir, 'IndexFileDeleter.h'),
    join_paths(lucene_include_dir, 'IndexFileNameFilter.h'),
    join_paths(lucene_include_dir, 'IndexFileNames.h'),
    join_paths(lucene_include_dir, 'IndexInput.h'),
    join_paths(lucene_include_dir, 'IndexOutput.h'),
    join_paths(lucene_include_dir, 'IndexReader.h'),
    join_paths(lucene_include_dir, 'IndexSearcher.h'),
    join_paths(lucene_include_dir, 'IndexWriter.h'),
    join_paths(lucene_include_dir, 'InfoStream.h'),
    join_paths(lucene_include_dir, 'InputStreamReader.h'),
    join_paths(lucene_include_dir, 'IntBlockPool.h'),
    join_paths(lucene_include_dir, 'IntFieldSource.h'),
    join_paths(lucene_include_dir, 'InvertedDocConsumer.h'),
    join_paths(lucene_include_dir, 'InvertedDocConsumerPerField.h'),
    join_paths(lucene_include_dir, 'InvertedDocConsumerPerThread.h'),
    join_paths(lucene_include_dir, 'InvertedDocEndConsumer.h'),
    join_paths(lucene_include_dir, 'InvertedDocEndConsumerPerField.h'),
    join_paths(lucene_include_dir, 'InvertedDocEndConsumerPerThread.h'),
    join_paths(lucene_include_dir, 'ISOLatin1AccentFilter.h'),
    join_paths(lucene_include_dir, 'KeepOnlyLastCommitDeletionPolicy.h'),
    join_paths(lucene_include_dir, 'KeywordAnalyzer.h'),
    join_paths(lucene_include_dir, 'KeywordTokenizer.h'),
    join_paths(lucene_include_dir, 'LengthFilter.h'),
    join_paths(lucene_include_dir, 'LetterTokenizer.h'),
    join_paths(lucene_include_dir, 'LoadFirstFieldSelector.h'),
    join_paths(lucene_include_dir, 'LockFactory.h'),
    join_paths(lucene_include_dir, 'Lock.h'),
    join_paths(lucene_include_dir, 'LogByteSizeMergePolicy.h'),
    join_paths(lucene_include_dir, 'LogDocMergePolicy.h'),
    join_paths(lucene_include_dir, 'LogMergePolicy.h'),
    join_paths(lucene_include_dir, 'LowerCaseFilter.h'),
    join_paths(lucene_include_dir, 'LowerCaseTokenizer.h'),
    join_paths(lucene_include_dir, 'LuceneAllocator.h'),
    join_paths(lucene_include_dir, 'LuceneException.h'),
    join_paths(lucene_include_dir, 'LuceneFactory.h'),
    join_paths(lucene_include_dir, 'Lucene.h'),
    join_paths(lucene_include_dir, 'LuceneHeaders.h'),
    join_paths(lucene_include_dir, 'LuceneObject.h'),
    join_paths(lucene_include_dir, 'LuceneSignal.h'),
    join_paths(lucene_include_dir, 'LuceneSync.h'),
    join_paths(lucene_include_dir, 'LuceneThread.h'),
    join_paths(lucene_include_dir, 'LuceneTypes.h'),
    join_paths(lucene_include_dir, 'MapFieldSelector.h'),
    join_paths(lucene_include_dir, 'Map.h'),
    join_paths(lucene_include_dir, 'MapOfSets.h'),
    join_paths(lucene_include_dir, 'MappingCharFilter.h'),
    join_paths(lucene_include_dir, 'MatchAllDocsQuery.h'),
    join_paths(lucene_include_dir, 'MaxPayloadFunction.h'),
    join_paths(lucene_include_dir, 'MergeDocIDRemapper.h'),
    join_paths(lucene_include_dir, 'MergePolicy.h'),
    join_paths(lucene_include_dir, 'MergeScheduler.h'),
    join_paths(lucene_include_dir, 'MinPayloadFunction.h'),
    join_paths(lucene_include_dir, 'MiscUtils.h'),
    join_paths(lucene_include_dir, 'MMapDirectory.h'),
    join_paths(lucene_include_dir, 'MultiFieldQueryParser.h'),
    join_paths(lucene_include_dir, 'MultiLevelSkipListReader.h'),
    join_paths(lucene_include_dir, 'MultiLevelSkipListWriter.h'),
    join_paths(lucene_include_dir, 'MultiPhraseQuery.h'),
    join_paths(lucene_include_dir, 'MultipleTermPositions.h'),
    join_paths(lucene_include_dir, 'MultiReader.h'),
    join_paths(lucene_include_dir, 'MultiSearcher.h'),
    join_paths(lucene_include_dir, 'MultiTermQuery.h'),
    join_paths(lucene_include_dir, 'MultiTermQueryWrapperFilter.h'),
    join_paths(lucene_include_dir, 'NativeFSLockFactory.h'),
    join_paths(lucene_include_dir, 'NearSpansOrdered.h'),
    join_paths(lucene_include_dir, 'NearSpansUnordered.h'),
    join_paths(lucene_include_dir, 'NoLockFactory.h'),
    join_paths(lucene_include_dir, 'NormalizeCharMap.h'),
    join_paths(lucene_include_dir, 'NormsWriter.h'),
    join_paths(lucene_include_dir, 'NormsWriterPerField.h'),
    join_paths(lucene_include_dir, 'NormsWriterPerThread.h'),
    join_paths(lucene_include_dir, 'NumberTools.h'),
    join_paths(lucene_include_dir, 'NumericField.h'),
    join_paths(lucene_include_dir, 'NumericRangeFilter.h'),
    join_paths(lucene_include_dir, 'NumericRangeQuery.h'),
    join_paths(lucene_include_dir, 'NumericTokenStream.h'),
    join_paths(lucene_include_dir, 'NumericUtils.h'),
    join_paths(lucene_include_dir, 'OffsetAttribute.h'),
    join_paths(lucene_include_dir, 'OpenBitSetDISI.h'),
    join_paths(lucene_include_dir, 'OpenBitSet.h'),
    join_paths(lucene_include_dir, 'OpenBitSetIterator.h'),
    join_paths(lucene_include_dir, 'OrdFieldSource.h'),
    join_paths(lucene_include_dir, 'ParallelMultiSearcher.h'),
    join_paths(lucene_include_dir, 'ParallelReader.h'),
    join_paths(lucene_include_dir, 'PayloadAttribute.h'),
    join_paths(lucene_include_dir, 'PayloadFunction.h'),
    join_paths(lucene_include_dir, 'Payload.h'),
    join_paths(lucene_include_dir, 'PayloadNearQuery.h'),
    join_paths(lucene_include_dir, 'PayloadSpanUtil.h'),
    join_paths(lucene_include_dir, 'PayloadTermQuery.h'),
    join_paths(lucene_include_dir, 'PerFieldAnalyzerWrapper.h'),
    join_paths(lucene_include_dir, 'PhrasePositions.h'),
    join_paths(lucene_include_dir, 'PhraseQuery.h'),
    join_paths(lucene_include_dir, 'PhraseQueue.h'),
    join_paths(lucene_include_dir, 'PhraseScorer.h'),
    join_paths(lucene_include_dir, 'PorterStemFilter.h'),
    join_paths(lucene_include_dir, 'PorterStemmer.h'),
    join_paths(lucene_include_dir, 'PositionBasedTermVectorMapper.h'),
    join_paths(lucene_include_dir, 'PositionIncrementAttribute.h'),
    join_paths(lucene_include_dir, 'PositiveScoresOnlyCollector.h'),
    join_paths(lucene_include_dir, 'PrefixFilter.h'),
    join_paths(lucene_include_dir, 'PrefixQuery.h'),
    join_paths(lucene_include_dir, 'PrefixTermEnum.h'),
    join_paths(lucene_include_dir, 'PriorityQueue.h'),
    join_paths(lucene_include_dir, 'Query.h'),
    join_paths(lucene_include_dir, 'QueryParseError.h'),
    join_paths(lucene_include_dir, 'QueryParserCharStream.h'),
    join_paths(lucene_include_dir, 'QueryParserConstants.h'),
    join_paths(lucene_include_dir, 'QueryParser.h'),
    join_paths(lucene_include_dir, 'QueryParserToken.h'),
    join_paths(lucene_include_dir, 'QueryParserTokenManager.h'),
    join_paths(lucene_include_dir, 'QueryTermVector.h'),
    join_paths(lucene_include_dir, 'QueryWrapperFilter.h'),
    join_paths(lucene_include_dir, 'RAMDirectory.h'),
    join_paths(lucene_include_dir, 'RAMFile.h'),
    join_paths(lucene_include_dir, 'RAMInputStream.h'),
    join_paths(lucene_include_dir, 'RAMOutputStream.h'),
    join_paths(lucene_include_dir, 'Random.h'),
    join_paths(lucene_include_dir, 'RawPostingList.h'),
    join_paths(lucene_include_dir, 'Reader.h'),
    join_paths(lucene_include_dir, 'ReaderUtil.h'),
    join_paths(lucene_include_dir, 'ReadOnlyDirectoryReader.h'),
    join_paths(lucene_include_dir, 'ReadOnlySegmentReader.h'),
    join_paths(lucene_include_dir, 'ReqExclScorer.h'),
    join_paths(lucene_include_dir, 'ReqOptSumScorer.h'),
    join_paths(lucene_include_dir, 'ReusableStringReader.h'),
    join_paths(lucene_include_dir, 'ReverseOrdFieldSource.h'),
    join_paths(lucene_include_dir, 'ScoreCachingWrappingScorer.h'),
    join_paths(lucene_include_dir, 'ScoreDoc.h'),
    join_paths(lucene_include_dir, 'ScorerDocQueue.h'),
    join_paths(lucene_include_dir, 'Scorer.h'),
    join_paths(lucene_include_dir, 'Searchable.h'),
    join_paths(lucene_include_dir, 'Searcher.h'),
    join_paths(lucene_include_dir, 'SegmentInfoCollection.h'),
    join_paths(lucene_include_dir, 'SegmentInfo.h'),
    join_paths(lucene_include_dir, 'SegmentInfos.h'),
    join_paths(lucene_include_dir, 'SegmentMergeInfo.h'),
    join_paths(lucene_include_dir, 'SegmentMergeQueue.h'),
    join_paths(lucene_include_dir, 'SegmentMerger.h'),
    join_paths(lucene_include_dir, 'SegmentReader.h'),
    join_paths(lucene_include_dir, 'SegmentTermDocs.h'),
    join_paths(lucene_include_dir, 'SegmentTermEnum.h'),
    join_paths(lucene_include_dir, 'SegmentTermPositions.h'),
    join_paths(lucene_include_dir, 'SegmentTermPositionVector.h'),
    join_paths(lucene_include_dir, 'SegmentTermVector.h'),
    join_paths(lucene_include_dir, 'SegmentWriteState.h'),
    join_paths(lucene_include_dir, 'SerialMergeScheduler.h'),
    join_paths(lucene_include_dir, 'SetBasedFieldSelector.h'),
    join_paths(lucene_include_dir, 'Set.h'),
    join_paths(lucene_include_dir, 'SimilarityDelegator.h'),
    join_paths(lucene_include_dir, 'Similarity.h'),
    join_paths(lucene_include_dir, 'SimpleAnalyzer.h'),
    join_paths(lucene_include_dir, 'SimpleFSDirectory.h'),
    join_paths(lucene_include_dir, 'SimpleFSLockFactory.h'),
    join_paths(lucene_include_dir, 'SimpleLRUCache.h'),
    join_paths(lucene_include_dir, 'SingleInstanceLockFactory.h'),
    join_paths(lucene_include_dir, 'SingleTermEnum.h'),
    join_paths(lucene_include_dir, 'SloppyPhraseScorer.h'),
    join_paths(lucene_include_dir, 'SmallDouble.h'),
    join_paths(lucene_include_dir, 'SnapshotDeletionPolicy.h'),
    join_paths(lucene_include_dir, 'SortedTermVectorMapper.h'),
    join_paths(lucene_include_dir, 'SortedVIntList.h'),
    join_paths(lucene_include_dir, 'SortField.h'),
    join_paths(lucene_include_dir, 'Sort.h'),
    join_paths(lucene_include_dir, 'SpanFilter.h'),
    join_paths(lucene_include_dir, 'SpanFilterResult.h'),
    join_paths(lucene_include_dir, 'SpanFirstQuery.h'),
    join_paths(lucene_include_dir, 'SpanNearQuery.h'),
    join_paths(lucene_include_dir, 'SpanNotQuery.h'),
    join_paths(lucene_include_dir, 'SpanOrQuery.h'),
    join_paths(lucene_include_dir, 'SpanQueryFilter.h'),
    join_paths(lucene_include_dir, 'SpanQuery.h'),
    join_paths(lucene_include_dir, 'SpanScorer.h'),
    join_paths(lucene_include_dir, 'Spans.h'),
    join_paths(lucene_include_dir, 'SpanTermQuery.h'),
    join_paths(lucene_include_dir, 'SpanWeight.h'),
    join_paths(lucene_include_dir, 'StandardAnalyzer.h'),
    join_paths(lucene_include_dir, 'StandardFilter.h'),
    join_paths(lucene_include_dir, 'StandardTokenizer.h'),
    join_paths(lucene_include_dir, 'StandardTokenizerImpl.h'),
    join_paths(lucene_include_dir, 'StopAnalyzer.h'),
    join_paths(lucene_include_dir, 'StopFilter.h'),
    join_paths(lucene_include_dir, 'StoredFieldsWriter.h'),
    join_paths(lucene_include_dir, 'StoredFieldsWriterPerThread.h'),
    join_paths(lucene_include_dir, 'StringReader.h'),
    join_paths(lucene_include_dir, 'StringUtils.h'),
    join_paths(lucene_include_dir, 'Synchronize.h'),
    join_paths(lucene_include_dir, 'targetver.h'),
    join_paths(lucene_include_dir, 'TeeSinkTokenFilter.h'),
    join_paths(lucene_include_dir, 'TermAttribute.h'),
    join_paths(lucene_include_dir, 'TermBuffer.h'),
    join_paths(lucene_include_dir, 'TermDocs.h'),
    join_paths(lucene_include_dir, 'TermEnum.h'),
    join_paths(lucene_include_dir, 'TermFreqVector.h'),
    join_paths(lucene_include_dir, 'Term.h'),
    join_paths(lucene_include_dir, 'TermInfo.h'),
    join_paths(lucene_include_dir, 'TermInfosReader.h'),
    join_paths(lucene_include_dir, 'TermInfosWriter.h'),
    join_paths(lucene_include_dir, 'TermPositions.h'),
    join_paths(lucene_include_dir, 'TermPositionVector.h'),
    join_paths(lucene_include_dir, 'TermQuery.h'),
    join_paths(lucene_include_dir, 'TermRangeFilter.h'),
    join_paths(lucene_include_dir, 'TermRangeQuery.h'),
    join_paths(lucene_include_dir, 'TermRangeTermEnum.h'),
    join_paths(lucene_include_dir, 'TermScorer.h'),
    join_paths(lucene_include_dir, 'TermsHashConsumer.h'),
    join_paths(lucene_include_dir, 'TermsHashConsumerPerField.h'),
    join_paths(lucene_include_dir, 'TermsHashConsumerPerThread.h'),
    join_paths(lucene_include_dir, 'TermsHash.h'),
    join_paths(lucene_include_dir, 'TermsHashPerField.h'),
    join_paths(lucene_include_dir, 'TermsHashPerThread.h'),
    join_paths(lucene_include_dir, 'TermSpans.h'),
    join_paths(lucene_include_dir, 'TermVectorEntryFreqSortedComparator.h'),
    join_paths(lucene_include_dir, 'TermVectorEntry.h'),
    join_paths(lucene_include_dir, 'TermVectorMapper.h'),
    join_paths(lucene_include_dir, 'TermVectorOffsetInfo.h'),
    join_paths(lucene_include_dir, 'TermVectorsReader.h'),
    join_paths(lucene_include_dir, 'TermVectorsTermsWriter.h'),
    join_paths(lucene_include_dir, 'TermVectorsTermsWriterPerField.h'),
    join_paths(lucene_include_dir, 'TermVectorsTermsWriterPerThread.h'),
    join_paths(lucene_include_dir, 'TermVectorsWriter.h'),
    join_paths(lucene_include_dir, 'TestPoint.h'),
    join_paths(lucene_include_dir, 'ThreadPool.h'),
    join_paths(lucene_include_dir, 'TimeLimitingCollector.h'),
    join_paths(lucene_include_dir, 'TokenFilter.h'),
    join_paths(lucene_include_dir, 'Token.h'),
    join_paths(lucene_include_dir, 'Tokenizer.h'),
    join_paths(lucene_include_dir, 'TokenStream.h'),
    join_paths(lucene_include_dir, 'TopDocsCollector.h'),
    join_paths(lucene_include_dir, 'TopDocs.h'),
    join_paths(lucene_include_dir, 'TopFieldCollector.h'),
    join_paths(lucene_include_dir, 'TopFieldDocs.h'),
    join_paths(lucene_include_dir, 'TopScoreDocCollector.h'),
    join_paths(lucene_include_dir, 'TypeAttribute.h'),
    join_paths(lucene_include_dir, 'UnicodeUtils.h'),
    join_paths(lucene_include_dir, 'UTF8Stream.h'),
    join_paths(lucene_include_dir, 'ValueSource.h'),
    join_paths(lucene_include_dir, 'ValueSourceQuery.h'),
    join_paths(lucene_include_dir, 'VariantUtils.h'),
    join_paths(lucene_include_dir, 'Weight.h'),
    join_paths(lucene_include_dir, 'WhitespaceAnalyzer.h'),
    join_paths(lucene_include_dir, 'WhitespaceTokenizer.h'),
    join_paths(lucene_include_dir, 'WildcardQuery.h'),
    join_paths(lucene_include_dir, 'WildcardTermEnum.h'),
    join_paths(lucene_include_dir, 'WordlistLoader.h'))
