# liblucene.document build file
#============================================================================

liblucene_inc += include_directories('.')
liblucene_document_dir = meson.current_source_dir()

liblucene_src += files(
    join_paths(liblucene_document_dir, 'AbstractField.cpp'),
    join_paths(liblucene_document_dir, 'CompressionTools.cpp'),
    join_paths(liblucene_document_dir, 'DateField.cpp'),
    join_paths(liblucene_document_dir, 'DateTools.cpp'),
    join_paths(liblucene_document_dir, 'Document.cpp'),
    join_paths(liblucene_document_dir, 'Fieldable.cpp'),
    join_paths(liblucene_document_dir, 'Field.cpp'),
    join_paths(liblucene_document_dir, 'FieldSelector.cpp'),
    join_paths(liblucene_document_dir, 'LoadFirstFieldSelector.cpp'),
    join_paths(liblucene_document_dir, 'MapFieldSelector.cpp'),
    join_paths(liblucene_document_dir, 'NumberTools.cpp'),
    join_paths(liblucene_document_dir, 'NumericField.cpp'),
    join_paths(liblucene_document_dir, 'SetBasedFieldSelector.cpp'))
