# liblucene++.include build file
#============================================================================

liblucene_inc += include_directories('.')
liblucene_include_dir = meson.current_source_dir()


liblucene_pch += files(
    join_paths(liblucene_include_dir, '_BooleanQuery.h'),
    join_paths(liblucene_include_dir, '_ByteFieldSource.h'),
    join_paths(liblucene_include_dir, '_CachingSpanFilter.h'),
    join_paths(liblucene_include_dir, '_CachingWrapperFilter.h'),
    join_paths(liblucene_include_dir, '_CheckIndex.h'),
    join_paths(liblucene_include_dir, '_ConcurrentMergeScheduler.h'),
    join_paths(liblucene_include_dir, '_ConstantScoreQuery.h'),
    join_paths(liblucene_include_dir, '_CustomScoreQuery.h'),
    join_paths(liblucene_include_dir, '_DirectoryReader.h'),
    join_paths(liblucene_include_dir, '_DisjunctionMaxQuery.h'),
    join_paths(liblucene_include_dir, '_DocIdBitSet.h'),
    join_paths(liblucene_include_dir, '_DocIdSet.h'),
    join_paths(liblucene_include_dir, '_FieldCache.h'),
    join_paths(liblucene_include_dir, '_FieldCacheRangeFilter.h'),
    join_paths(liblucene_include_dir, '_FieldCacheSanityChecker.h'),
    join_paths(liblucene_include_dir, '_FieldCacheTermsFilter.h'),
    join_paths(liblucene_include_dir, '_FieldValueHitQueue.h'),
    join_paths(liblucene_include_dir, '_FilteredDocIdSet.h'),
    join_paths(liblucene_include_dir, '_FilteredQuery.h'),
    join_paths(liblucene_include_dir, '_FilterManager.h'),
    join_paths(liblucene_include_dir, '_FuzzyQuery.h'),
    join_paths(liblucene_include_dir, '_IndexReader.h'),
    join_paths(liblucene_include_dir, '_IndexWriter.h'),
    join_paths(liblucene_include_dir, '_IntFieldSource.h'),
    join_paths(liblucene_include_dir, 'LuceneInc.h'),
    join_paths(liblucene_include_dir, '_MatchAllDocsQuery.h'),
    join_paths(liblucene_include_dir, '_MMapDirectory.h'),
    join_paths(liblucene_include_dir, '_MultiPhraseQuery.h'),
    join_paths(liblucene_include_dir, '_MultipleTermPositions.h'),
    join_paths(liblucene_include_dir, '_MultiSearcher.h'),
    join_paths(liblucene_include_dir, '_MultiTermQuery.h'),
    join_paths(liblucene_include_dir, '_NativeFSLockFactory.h'),
    join_paths(liblucene_include_dir, '_NearSpansUnordered.h'),
    join_paths(liblucene_include_dir, '_NoLockFactory.h'),
    join_paths(liblucene_include_dir, '_NumericRangeQuery.h'),
    join_paths(liblucene_include_dir, '_OrdFieldSource.h'),
    join_paths(liblucene_include_dir, '_ParallelReader.h'),
    join_paths(liblucene_include_dir, '_PayloadTermQuery.h'),
    join_paths(liblucene_include_dir, '_PhraseQuery.h'),
    join_paths(liblucene_include_dir, '_QueryWrapperFilter.h'),
    join_paths(liblucene_include_dir, '_ReverseOrdFieldSource.h'),
    join_paths(liblucene_include_dir, '_ScorerDocQueue.h'),
    join_paths(liblucene_include_dir, '_SegmentInfos.h'),
    join_paths(liblucene_include_dir, '_SegmentReader.h'),
    join_paths(liblucene_include_dir, '_Similarity.h'),
    join_paths(liblucene_include_dir, '_SimpleFSDirectory.h'),
    join_paths(liblucene_include_dir, '_SimpleFSLockFactory.h'),
    join_paths(liblucene_include_dir, '_SingleInstanceLockFactory.h'),
    join_paths(liblucene_include_dir, '_SnapshotDeletionPolicy.h'),
    join_paths(liblucene_include_dir, '_SortedVIntList.h'),
    join_paths(liblucene_include_dir, '_SpanFirstQuery.h'),
    join_paths(liblucene_include_dir, '_SpanNotQuery.h'),
    join_paths(liblucene_include_dir, '_SpanOrQuery.h'),
    join_paths(liblucene_include_dir, '_StandardAnalyzer.h'),
    join_paths(liblucene_include_dir, '_StopAnalyzer.h'),
    join_paths(liblucene_include_dir, '_TermQuery.h'),
    join_paths(liblucene_include_dir, '_TimeLimitingCollector.h'),
    join_paths(liblucene_include_dir, '_TopFieldCollector.h'),
    join_paths(liblucene_include_dir, '_TopScoreDocCollector.h'),
    join_paths(liblucene_include_dir, '_ValueSourceQuery.h'))