# liblucene.index build file
#============================================================================

liblucene_inc += include_directories('.')
liblucene_index_dir = meson.current_source_dir()

liblucene_src += files(
    join_paths(liblucene_index_dir, 'AbstractAllTermDocs.cpp'),
    join_paths(liblucene_index_dir, 'AllTermDocs.cpp'),
    join_paths(liblucene_index_dir, 'BufferedDeletes.cpp'),
    join_paths(liblucene_index_dir, 'ByteBlockPool.cpp'),
    join_paths(liblucene_index_dir, 'ByteSliceReader.cpp'),
    join_paths(liblucene_index_dir, 'ByteSliceWriter.cpp'),
    join_paths(liblucene_index_dir, 'CharBlockPool.cpp'),
    join_paths(liblucene_index_dir, 'CheckIndex.cpp'),
    join_paths(liblucene_index_dir, 'CompoundFileReader.cpp'),
    join_paths(liblucene_index_dir, 'CompoundFileWriter.cpp'),
    join_paths(liblucene_index_dir, 'ConcurrentMergeScheduler.cpp'),
    join_paths(liblucene_index_dir, 'DefaultSkipListReader.cpp'),
    join_paths(liblucene_index_dir, 'DefaultSkipListWriter.cpp'),
    join_paths(liblucene_index_dir, 'DirectoryReader.cpp'),
    join_paths(liblucene_index_dir, 'DocConsumer.cpp'),
    join_paths(liblucene_index_dir, 'DocConsumerPerThread.cpp'),
    join_paths(liblucene_index_dir, 'DocFieldConsumer.cpp'),
    join_paths(liblucene_index_dir, 'DocFieldConsumerPerField.cpp'),
    join_paths(liblucene_index_dir, 'DocFieldConsumerPerThread.cpp'),
    join_paths(liblucene_index_dir, 'DocFieldConsumers.cpp'),
    join_paths(liblucene_index_dir, 'DocFieldConsumersPerField.cpp'),
    join_paths(liblucene_index_dir, 'DocFieldConsumersPerThread.cpp'),
    join_paths(liblucene_index_dir, 'DocFieldProcessor.cpp'),
    join_paths(liblucene_index_dir, 'DocFieldProcessorPerField.cpp'),
    join_paths(liblucene_index_dir, 'DocFieldProcessorPerThread.cpp'),
    join_paths(liblucene_index_dir, 'DocInverter.cpp'),
    join_paths(liblucene_index_dir, 'DocInverterPerField.cpp'),
    join_paths(liblucene_index_dir, 'DocInverterPerThread.cpp'),
    join_paths(liblucene_index_dir, 'DocumentsWriter.cpp'),
    join_paths(liblucene_index_dir, 'DocumentsWriterThreadState.cpp'),
    join_paths(liblucene_index_dir, 'FieldInfo.cpp'),
    join_paths(liblucene_index_dir, 'FieldInfos.cpp'),
    join_paths(liblucene_index_dir, 'FieldInvertState.cpp'),
    join_paths(liblucene_index_dir, 'FieldSortedTermVectorMapper.cpp'),
    join_paths(liblucene_index_dir, 'FieldsReader.cpp'),
    join_paths(liblucene_index_dir, 'FieldsWriter.cpp'),
    join_paths(liblucene_index_dir, 'FilterIndexReader.cpp'),
    join_paths(liblucene_index_dir, 'FormatPostingsDocsConsumer.cpp'),
    join_paths(liblucene_index_dir, 'FormatPostingsDocsWriter.cpp'),
    join_paths(liblucene_index_dir, 'FormatPostingsFieldsConsumer.cpp'),
    join_paths(liblucene_index_dir, 'FormatPostingsFieldsWriter.cpp'),
    join_paths(liblucene_index_dir, 'FormatPostingsPositionsConsumer.cpp'),
    join_paths(liblucene_index_dir, 'FormatPostingsPositionsWriter.cpp'),
    join_paths(liblucene_index_dir, 'FormatPostingsTermsConsumer.cpp'),
    join_paths(liblucene_index_dir, 'FormatPostingsTermsWriter.cpp'),
    join_paths(liblucene_index_dir, 'FreqProxFieldMergeState.cpp'),
    join_paths(liblucene_index_dir, 'FreqProxTermsWriter.cpp'),
    join_paths(liblucene_index_dir, 'FreqProxTermsWriterPerField.cpp'),
    join_paths(liblucene_index_dir, 'FreqProxTermsWriterPerThread.cpp'),
    join_paths(liblucene_index_dir, 'IndexCommit.cpp'),
    join_paths(liblucene_index_dir, 'IndexDeletionPolicy.cpp'),
    join_paths(liblucene_index_dir, 'IndexFileDeleter.cpp'),
    join_paths(liblucene_index_dir, 'IndexFileNameFilter.cpp'),
    join_paths(liblucene_index_dir, 'IndexFileNames.cpp'),
    join_paths(liblucene_index_dir, 'IndexReader.cpp'),
    join_paths(liblucene_index_dir, 'IndexWriter.cpp'),
    join_paths(liblucene_index_dir, 'IntBlockPool.cpp'),
    join_paths(liblucene_index_dir, 'InvertedDocConsumer.cpp'),
    join_paths(liblucene_index_dir, 'InvertedDocConsumerPerField.cpp'),
    join_paths(liblucene_index_dir, 'InvertedDocConsumerPerThread.cpp'),
    join_paths(liblucene_index_dir, 'InvertedDocEndConsumer.cpp'),
    join_paths(liblucene_index_dir, 'InvertedDocEndConsumerPerField.cpp'),
    join_paths(liblucene_index_dir, 'InvertedDocEndConsumerPerThread.cpp'),
    join_paths(liblucene_index_dir, 'KeepOnlyLastCommitDeletionPolicy.cpp'),
    join_paths(liblucene_index_dir, 'LogByteSizeMergePolicy.cpp'),
    join_paths(liblucene_index_dir, 'LogDocMergePolicy.cpp'),
    join_paths(liblucene_index_dir, 'LogMergePolicy.cpp'),
    join_paths(liblucene_index_dir, 'MergeDocIDRemapper.cpp'),
    join_paths(liblucene_index_dir, 'MergePolicy.cpp'),
    join_paths(liblucene_index_dir, 'MergeScheduler.cpp'),
    join_paths(liblucene_index_dir, 'MultiLevelSkipListReader.cpp'),
    join_paths(liblucene_index_dir, 'MultiLevelSkipListWriter.cpp'),
    join_paths(liblucene_index_dir, 'MultipleTermPositions.cpp'),
    join_paths(liblucene_index_dir, 'MultiReader.cpp'),
    join_paths(liblucene_index_dir, 'NormsWriter.cpp'),
    join_paths(liblucene_index_dir, 'NormsWriterPerField.cpp'),
    join_paths(liblucene_index_dir, 'NormsWriterPerThread.cpp'),
    join_paths(liblucene_index_dir, 'ParallelReader.cpp'),
    join_paths(liblucene_index_dir, 'Payload.cpp'),
    join_paths(liblucene_index_dir, 'PositionBasedTermVectorMapper.cpp'),
    join_paths(liblucene_index_dir, 'RawPostingList.cpp'),
    join_paths(liblucene_index_dir, 'ReadOnlyDirectoryReader.cpp'),
    join_paths(liblucene_index_dir, 'ReadOnlySegmentReader.cpp'),
    join_paths(liblucene_index_dir, 'ReusableStringReader.cpp'),
    join_paths(liblucene_index_dir, 'SegmentInfoCollection.cpp'),
    join_paths(liblucene_index_dir, 'SegmentInfo.cpp'),
    join_paths(liblucene_index_dir, 'SegmentInfos.cpp'),
    join_paths(liblucene_index_dir, 'SegmentMergeInfo.cpp'),
    join_paths(liblucene_index_dir, 'SegmentMergeQueue.cpp'),
    join_paths(liblucene_index_dir, 'SegmentMerger.cpp'),
    join_paths(liblucene_index_dir, 'SegmentReader.cpp'),
    join_paths(liblucene_index_dir, 'SegmentTermDocs.cpp'),
    join_paths(liblucene_index_dir, 'SegmentTermEnum.cpp'),
    join_paths(liblucene_index_dir, 'SegmentTermPositions.cpp'),
    join_paths(liblucene_index_dir, 'SegmentTermPositionVector.cpp'),
    join_paths(liblucene_index_dir, 'SegmentTermVector.cpp'),
    join_paths(liblucene_index_dir, 'SegmentWriteState.cpp'),
    join_paths(liblucene_index_dir, 'SerialMergeScheduler.cpp'),
    join_paths(liblucene_index_dir, 'SnapshotDeletionPolicy.cpp'),
    join_paths(liblucene_index_dir, 'SortedTermVectorMapper.cpp'),
    join_paths(liblucene_index_dir, 'StoredFieldsWriter.cpp'),
    join_paths(liblucene_index_dir, 'StoredFieldsWriterPerThread.cpp'),
    join_paths(liblucene_index_dir, 'TermBuffer.cpp'),
    join_paths(liblucene_index_dir, 'Term.cpp'),
    join_paths(liblucene_index_dir, 'TermDocs.cpp'),
    join_paths(liblucene_index_dir, 'TermEnum.cpp'),
    join_paths(liblucene_index_dir, 'TermFreqVector.cpp'),
    join_paths(liblucene_index_dir, 'TermInfo.cpp'),
    join_paths(liblucene_index_dir, 'TermInfosReader.cpp'),
    join_paths(liblucene_index_dir, 'TermInfosWriter.cpp'),
    join_paths(liblucene_index_dir, 'TermPositions.cpp'),
    join_paths(liblucene_index_dir, 'TermPositionVector.cpp'),
    join_paths(liblucene_index_dir, 'TermsHashConsumer.cpp'),
    join_paths(liblucene_index_dir, 'TermsHashConsumerPerField.cpp'),
    join_paths(liblucene_index_dir, 'TermsHashConsumerPerThread.cpp'),
    join_paths(liblucene_index_dir, 'TermsHash.cpp'),
    join_paths(liblucene_index_dir, 'TermsHashPerField.cpp'),
    join_paths(liblucene_index_dir, 'TermsHashPerThread.cpp'),
    join_paths(liblucene_index_dir, 'TermVectorEntry.cpp'),
    join_paths(liblucene_index_dir, 'TermVectorEntryFreqSortedComparator.cpp'),
    join_paths(liblucene_index_dir, 'TermVectorMapper.cpp'),
    join_paths(liblucene_index_dir, 'TermVectorOffsetInfo.cpp'),
    join_paths(liblucene_index_dir, 'TermVectorsReader.cpp'),
    join_paths(liblucene_index_dir, 'TermVectorsTermsWriter.cpp'),
    join_paths(liblucene_index_dir, 'TermVectorsTermsWriterPerField.cpp'),
    join_paths(liblucene_index_dir, 'TermVectorsTermsWriterPerThread.cpp'),
    join_paths(liblucene_index_dir, 'TermVectorsWriter.cpp'))