# liblucene.queryparser build file
#============================================================================

liblucene_inc += include_directories('.')
liblucene_queryparser_dir = meson.current_source_dir()

liblucene_src += files(
    join_paths(liblucene_queryparser_dir, 'FastCharStream.cpp'),
    join_paths(liblucene_queryparser_dir, 'MultiFieldQueryParser.cpp'),
    join_paths(liblucene_queryparser_dir, 'QueryParseError.cpp'),
    join_paths(liblucene_queryparser_dir, 'QueryParserCharStream.cpp'),
    join_paths(liblucene_queryparser_dir, 'QueryParserConstants.cpp'),
    join_paths(liblucene_queryparser_dir, 'QueryParser.cpp'),
    join_paths(liblucene_queryparser_dir, 'QueryParserToken.cpp'),
    join_paths(liblucene_queryparser_dir, 'QueryParserTokenManager.cpp'))
